--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,18 +13,20 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts start",
+    "build": "REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts build",
+    "test": "REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts test",
+    "eject": "REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
