--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.9",
+    "cross-env": "^7.0.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -23,10 +24,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts start",
-    "build": "REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts build",
-    "test": "REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts test",
-    "eject": "REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts eject"
+    "start": "cross-env REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts start",
+    "build": "cross-env REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts build",
+    "test": "cross-env REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts test",
+    "eject": "cross-env REACT_APP_BACKEND_URL=http://localhost:4000 react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
